--- a/indax.html
+++ b/indax.html
@@ -7,13 +7,75 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="work-sans-font">
-    <header>
-        <nav class="navber">
+    <header class="bg-light">
+        <nav class="navber display-flax">
             <h3 class="brand">G3 Architects</h3>
+            <ul class="nav-links display-flax">
+                <li class="nav-item"><a href="" class="nav-link tax-gray">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link tax-gray">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link tax-gray">Contact Us</a></li>
+                <li class="nav-item"><a href="" class="nav-link tax-gray">Login</a></li>
+            </ul>
         </nav>
+        <div class="banner">
+        <div class="banner-content">
+            <h1 class="banner-title">
+            Brand New Brand New 
+            Group of Architects
+        </h1>
+        <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+        <button class="btn-primary">Explore More</button>
+        </div>
+            <img class="banner-img" src="images/banner.png" alt="">
+        </div>
     </header>
     <main>
-
+        <!-- team section start -->
+        <section class="teams display-flax">
+            <div class="team-img-container">
+                <img src="images/team1.png" alt="two architect discussing about design">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="our-features">
+                <h3 class="section-title"><span id="quick-list" class="taxt-light-gray">Quick list </span> <span id="">of Our </span> <span class="text-primary">Features</span> </h3>
+                <p class="fearture-description taxt-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look evenc</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+        <!-- team section end -->
+         <!--     features will enjoy -->
+        <section>
+            <h3 class="section-title">Some-Facts</h3>
+            <p class="taxt-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="facts-container">
+                <!-- .fact*4>img+h4.fact-number+h5.fact-name -->
+                <div class="fact">
+                    <img src="" alt="">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+            </div>
+        </section>
+        <!-- some facts -->
+         <section class="some-facts">
+         </section>
     </main>
     <footer>
 
