--- a/indax.html
+++ b/indax.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="work-sans-font">
-    <header class="bg-light">
-        <nav class="navber display-flax">
+    <header class="bg-light ">
+        <nav class="navber display-flax container">
             <h3 class="brand">G3 Architects</h3>
             <ul class="nav-links display-flax">
                 <li class="nav-item"><a href="" class="nav-link tax-gray">Home</a></li>
@@ -17,7 +17,7 @@
                 <li class="nav-item"><a href="" class="nav-link tax-gray">Login</a></li>
             </ul>
         </nav>
-        <div class="banner">
+        <div class="banner container">
         <div class="banner-content">
             <h1 class="banner-title">
             Brand New Brand New 
@@ -45,36 +45,48 @@
             </div>
         </section>
         <!-- team section end -->
-         <!--     features will enjoy -->
-        <section>
+         <!-- some facts -->
+        <section class="">
             <h3 class="section-title">Some-Facts</h3>
             <p class="taxt-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
             <div class="facts-container">
-                <!-- .fact*4>img+h4.fact-number+h5.fact-name -->
-                <div class="fact">
-                    <img src="" alt="">
-                    <h4 class="fact-number"></h4>
-                    <h5 class="fact-name"></h5>
+                <!-- .fact-card*4>img+h4.fact-number+h5.fact-name -->
+                <div class="fact-card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h4 class="fact-number">54</h4>
+                    <h5 class="fact-name">Awards Winnings</h5>
                 </div>
-                <div class="fact">
-                    <img src="" alt="">
-                    <h4 class="fact-number"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="fact-card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h4 class="fact-number">1458</h4>
+                    <h5 class="fact-name">Project Finished</h5>
                 </div>
-                <div class="fact">
-                    <img src="" alt="">
-                    <h4 class="fact-number"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="fact-card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h4 class="fact-number">590</h4>
+                    <h5 class="fact-name">Clients Worked</h5>
                 </div>
-                <div class="fact">
-                    <img src="" alt="">
-                    <h4 class="fact-number"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="fact-card">
+                    <img src="images/icons/email.png" alt="">
+                    <h4 class="fact-number">22578</h4>
+                    <h5 class="fact-name">Email Send</h5>
                 </div>
             </div>
         </section>
-        <!-- some facts -->
-         <section class="some-facts">
+        <!-- some facts end -->
+         <section class="our-sponsors">
+            <div class="sponsor-info">
+                <h3 class="section-title">Our Sponsors</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsor-companies">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+
          </section>
     </main>
     <footer>
